css/default.css
/* ... */
/*****************/
/* MULTI-COLUMNS */
/*****************/
/* Inspired by Markdeep (https://casual-effects.com/markdeep/features.md.html#multiplecolumns); limited multi-column support as a div class annotation */
/* This is particularly useful for extremely long ('skinny') lists where items tend to be short, such as in /dnm-archive#overall-coverage or /replication */
/* Uses CSS3 columns: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Columns/Using_multi-column_layouts https://www.caniuse.com/#feat=multicolumn */
/* Currently limited to lists due to issues with hidden:overflow in FF and sidenotes.js in Chrome. */
.markdownBody .columns > ul,
.markdownBody .columns > ol {
    --GW-list-left-padding: 1.5em;
}
.markdownBody .columns > ul,
.markdownBody .columns > ol {
    column-width: 12em;
    column-gap: 3em;
    margin-bottom: 2em;

    /*  Without `clear`, columns don’t render properly if there’s a float.

		NOTE: This might no longer be true? Commenting this out to see if
		anything breaks. —SA 2023-04-04
     */
/*     clear: both; */
}
.markdownBody .columns:first-child > ul,
.markdownBody .columns:first-child > ol {
    margin-top: 1em;
}
.markdownBody .columns:last-child > ul,
.markdownBody .columns:last-child > ol {
    margin-bottom: 1em;
}
.markdownBody .columns li,
.markdownBody .columns li p {
    text-align: left;
    break-inside: avoid;
}

/**********************/
/*	Figures in columns.
 */

.markdownBody .columns.figures > ul {
    --GW-list-left-padding: 0;

    column-gap: 1.5em;
}
.markdownBody .columns.figures > ul > li::before {
    display: none;
}

.markdownBody .columns.figures figure {
	max-width: unset;
    margin: 0 0 1em 0;
}
.markdownBody .columns.figures figure img,
.markdownBody .columns.figures figure svg,
.markdownBody .columns.figures figure video,
.markdownBody .columns.figures figure audio {
	max-width: 100%;
}

/*  Special styles for special browsers.
	*/
@supports (-moz-user-focus: normal) {
	.markdownBody .columns.figures figcaption {
		line-height: initial;
	}
}


/***************/
/* ADMONITIONS */
/***************/
/* Highlighted boxes: 'admonitions' are small break-out boxes with notes, tips, warnings, etc. for the reader.  */
/* These are particularly useful in didactic technical writing, where there are many ways to slip up while using or coding something. */
/* Available (in increasing order of minatoriness): 'tip', 'note', 'warning', 'error'. */
/* Based on Markdeep's implementation: https://casual-effects.com/markdeep/features.md.html#basicformatting/admonitions (which appears loosely inspired by Wikipedia's notification templates like `{{NPOV}}`) */
/* and modified to grayscale (increasing intensity == increasing warning) for Gwern.net. */
/* Usage examples: */
/* - <div class="admonition tip"><div class="admonition-title">Tip title (optional)</div> text</div> */
/* - <div class="admonition note"><div class="admonition-title">Note title (*)</div> text</div> */
/* - <div class="admonition warning"><div class="admonition-title">Warning title (*)</div> text</div> */
/* - <div class="admonition error"><div class="admonition-title">Error title (*)</div> text</div> */
.admonition {
    --admonition-text-color: currentColor;

    --GW-link-underline-background-color: var(--admonition-background-color);

    font-family: var(--GW-sans-serif-font-stack);
    font-size: 0.875em;
    color: var(--admonition-text-color);
    position: relative;
    margin: 2em 0 1.5em 0;
    padding: 0.75em 1.25em 0.875em 1.125em;
    border-left: 2.875em solid var(--admonition-left-border-color);
    background-color: var(--admonition-background-color);
}
.admonition-title {
    font-weight: bold;
}

.admonition.note {
    --admonition-background-color: var(--GW-admonition-note-background-color);
    --admonition-left-border-color: var(--GW-admonition-note-left-border-color);
}
.admonition.tip {
    --admonition-background-color: var(--GW-admonition-tip-background-color);
    --admonition-left-border-color: var(--GW-admonition-tip-left-border-color);
}
.admonition.warning {
    --admonition-background-color: var(--GW-admonition-warning-background-color);
    --admonition-left-border-color: var(--GW-admonition-warning-left-border-color);
    --admonition-text-color: var(--GW-admonition-warning-text-color);
}
.admonition.error {
    --admonition-background-color: var(--GW-admonition-error-background-color);
    --admonition-left-border-color: var(--GW-admonition-error-left-border-color);
    --admonition-text-color: var(--GW-admonition-error-text-color);
}

.admonition::before {
    width: 2.875em;
    height: 100%;
    position: absolute;
    top: 0;
    right: 100%;
    padding: 0.60em;
    box-sizing: border-box;
}

.admonition.tip::before {
    content: url('/static/img/icon/info-circle.svg');
}
.admonition.note::before {
    content: url('/static/img/icon/arrow-right-white.svg');
    padding: 0.85em;
}
.admonition.warning::before {
    content: url('/static/img/icon/exclamation-triangle-white.svg');
    padding-top: 0.75em;
}
.admonition.error::before {
    content: url('/static/img/icon/skull-crossbones-white.svg');
    padding: 0.75em;
}

.admonition p:last-child {
    margin-bottom: 0;
}

.admonition code {
    --GW-code-element-background-color: transparent;

    border: none;
    padding-left: 0;
    font-size: unset;
}

.admonition .footnote-ref {
    text-shadow: none;
}

.admonition.warning,
.admonition.error {
    --GW-link-underline-gradient-line-color: var(--GW-admonition-reversed-link-underline-gradient-line-color);
    --GW-link-underline-gradient-line-color-hover: var(--GW-admonition-reversed-link-underline-gradient-line-color-hover);
    --GW-footnote-ref-highlight-background-color: var(--GW-admonition-reversed-footnote-ref-highlight-background-color);
}
.admonition.warning {
    --GW-dotted-underline-background-image: url('data:image/gif;base64,R0lGODlhBAACAPAAMZqamv///ywAAAAABAACAAACBEwAhgUAOw==');
}
/* ... */

